@@ -2,6 +2,7 @@
 
 	* Torrent.cc: fixed ut_metadata total_size.
 	* xmap.cc, xmap.h: (each_finished, exists) new methods.
+	* network.cc, network.h: (set_compact(const char*,size_t)) new method.
 
 2012-08-16  Alexander V. Lukyanov <lav@yars.free.net>
 
